<resources>
    <string name="app_name">SavingBeasts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="texto_prueba">Todo el movidote</string>
    <string name="home">Home</string>
    <string name="all">Todo</string>
    <string name="statistics">Estadísitcas</string>
    <string name="settings">Ajustes</string>
    <string name="texto_prueba_home">Todo el movidote de home</string>
    <string name="texto_prueba_statistics">Todo el movidote de estadisticas</string>
    <string name="texto_prueba_settings">Todo el movidote de ajustes</string>
    <string name="texto_prueba_all">Todo el movidote de todo</string>
    <string name="imagen_Home">imagen</string>
    <string name="actualAll">Actual: </string>
    <string name="restanteAll">Restante: </string>
    <string name="finalAll">Final: </string>
    <string name="diasRestantesAll">"Días restantes: "</string>
    <string name="itemElegido">Elige una opcion para el item:</string>
    <string name="editar">Editar</string>
    <string name="borrar">Borrar</string>
    <string name="editarNombre">Nombre:</string>
    <string name="editarCantidadFinal">Cantidad Final:</string>
    <string name="editarCantidadActual">"Cantidad Actual: "</string>
    <string name="editarFecha">Fecha:</string>
    <string name="editarFoto">Seleccioanr Foto</string>
    <string name="cancelar">Cancelar</string>
    <string name="editar_ahorro">Editar Ahorro</string>
    <string name="guardar">Guardar</string>
    <string name="editarPeriodo">Periodo</string>
    <string name="noHayAhorros">No tienes ningún ahorro</string>
    <string name="noHayAhorrosPendientes">No tienes ahorros pendientes</string>
    <string name="boton">Botón</string>
    <string name="barraFechas">/</string>
    <string name="guardar_ahorro">Guardar nuevo ahorro</string>
    <string name="euro">€</string>
    <string name="ahorroRealizado">Ahorro realizado</string>
    <string name="ahorroEditado">Ahorro editado con éxito</string>
    <string name="ahorroEliminado">Ahorro eliminado con éxito</string>
    <string name="error_nombre_vacio">Debes elegir un nombre para el ahorro</string>
    <string name="error_cantidad_invalida">Debes elegir una cantidad para el ahorro</string>
    <string name="error_fecha_invalida">Debes introducir una fecha válida</string>
    <string name="error_periodo_invalido">El periodo debe ser de mínimo un día</string>
    <string name="error_imagen_vacia">Debes seleccionar una imagen</string>
    <string name="error_cantidad_actual_invalida">Debes elejir una cantidad mayor o igual a 0 para el ahorro</string>
    <string name="dinero_restante">Cantidad restante total:</string>
    <string name="dinero_ahorrado">Cantidad total ahorrada:</string>
    <string name="dinero_terminado">Cantidad total de ahorros:</string>
    <string name="finished">Terminada</string>
    <string name="saved">Ahorrada</string>
    <string name="remaining">Restante</string>
    <string name="grafico">Estadísitcas generales</string>
    <string name="noTerminada">Sin terminada</string>
    <string name="noData">No hay suficientes datos</string>
    <string name="modena">Moneda:</string>
    <string name="fecha">Formato fecha:</string>
</resources>