<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/allFragment"
        android:icon="@drawable/all"
        android:title="@string/all"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/statisticsFragment"
        android:icon="@drawable/statistics"
        android:title="@string/statistics"
        app:showAsAction="always" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/settings"
        android:title="@string/settings"
        app:showAsAction="always" />

</menu>