<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_edit"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal|center_vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/editNombreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editarNombre" />

    <EditText
        android:id="@+id/editNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:id="@+id/editCantidadFinalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/editarCantidadFinal" />

    <EditText
        android:id="@+id/editCantidadActual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <TextView
        android:id="@+id/editFechaLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editarFecha" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <EditText
            android:id="@+id/editFechaDia"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="number" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/barraFechas"/>

        <EditText
            android:id="@+id/editFechaMes"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="number" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/barraFechas"/>
        <EditText
            android:id="@+id/editFechaAno"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </LinearLayout>

    <TextView
        android:id="@+id/editPeriodoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editarPeriodo" />

    <EditText
        android:id="@+id/editPeriodo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <Button
        android:id="@+id/editarFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editarFoto" />


</LinearLayout>