<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_statistics"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StatisticsFragment">

    <!-- TODO: Update blank fragment layout -->
    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pieChartStatistics"
        android:layout_width="match_parent"
        android:layout_height="411dp">

    </com.github.mikephil.charting.charts.PieChart>

    <LinearLayout
        android:layout_margin="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dineroRestante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/dinero_restante">

        </TextView>

        <TextView
            android:id="@+id/dineroRestanteCalc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textSize="18sp"
            android:layout_weight="1">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_margin="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dineroAhorrado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_weight="1"
            android:text="@string/dinero_ahorrado">

        </TextView>

        <TextView
            android:id="@+id/dineroAhorradoCalc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textAlignment="textEnd"
            android:layout_weight="1">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_margin="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dineroTotalTerminado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_weight="1"
            android:text="@string/dinero_terminado">

        </TextView>

        <TextView
            android:id="@+id/dineroTotalTerminadoCalc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textAlignment="textEnd"
            android:layout_weight="1">

        </TextView>

    </LinearLayout>
</LinearLayout>